# create-unity-template

./: .gitignore  Cargo.toml  README.md  config.toml
src/: bundle.rs  config.rs  main.rs
