[package]
name = "create-unity-template"
version = "0.1.1"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0"
indicatif = "0.17.3"
dialoguer = "0.10.3"
console = "0.15.5"
flate2 = "1.0.25"
tar = "0.4.38"

[dependencies.clap]
version = "4.1.4"
features = ["derive"]

[dependencies.toml]
version = "0.7.2"
features = ["display"]